--- a/usr/lib/sparky-aptus-appcenter/net-p2p.html
+++ b/usr/lib/sparky-aptus-appcenter/net-p2p.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: Dec 3, 2018 by pavroo
+Last update: Dec 6, 2018 by pavroo
 -->
 	<head>
 		<title>APTus AppCenter</title>
@@ -34,9 +34,9 @@ Last update: Dec 3, 2018 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
-		<td><a href="aptus://web_google-earth"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/google-earth.svg" class="appicon"><br /></a>
+		<td><a href="aptus://web_"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_google-earth"><b>Google Earth</b><br /><span><script>dict.print('web', 'googleearth');</script></span></a>
+		<td><a href="aptus://web_"><b>X</b><br /><span><script>dict.print('web', '');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
