--- a/usr/lib/sparky-aptus-appcenter/net-email.html
+++ b/usr/lib/sparky-aptus-appcenter/net-email.html
@@ -34,65 +34,65 @@ Last update: Dec 6, 2018 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
-		<td><a href="aptus://webemail_alpine"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
+		<td><a href="aptus://web_alpine"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://webemail_alpine"><b>Alpine</b><br /><span><script>dict.print('netemail', 'alpine');</script></span></a>
+		<td><a href="aptus://web_alpine"><b>Alpine</b><br /><span><script>dict.print('web', 'alpine');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://webemail_claws-mail"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/claws-mail.svg" class="appicon"><br /></a>
+		<td><a href="aptus://web_claws-mail"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/claws-mail.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://webemail_claws-mail"><b>Claws-Mail</b><br /><span><script>dict.print('netemail', 'clawsmail');</script></span></a>
+		<td><a href="aptus://web_claws-mail"><b>Claws-Mail</b><br /><span><script>dict.print('web', 'clawsmail');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://webemail_evolution"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/evolution.svg" class="appicon"><br /></a>
+		<td><a href="aptus://web_evolution"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/evolution.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://webemail_evolution"><b>Evolution</b><br /><span><script>dict.print('netemail', 'evolution');</script></span></a>
+		<td><a href="aptus://web_evolution"><b>Evolution</b><br /><span><script>dict.print('web', 'evolution');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://webemail_geary"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/geary.svg" class="appicon"><br /></a>
+		<td><a href="aptus://web_geary"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/geary.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://webemail_geary"><b>Geary</b><br /><span><script>dict.print('netemail', 'geary');</script></span></a>
+		<td><a href="aptus://web_geary"><b>Geary</b><br /><span><script>dict.print('web', 'geary');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://webemail_kmail"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/kmail.svg" class="appicon"><br /></a>
+		<td><a href="aptus://web_kmail"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/kmail.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://webemail_kmail"><b>KMail</b><br /><span><script>dict.print('netemail', 'kmail');</script></span></a>
+		<td><a href="aptus://web_kmail"><b>KMail</b><br /><span><script>dict.print('web', 'kmail');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://webemail_mutt"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
+		<td><a href="aptus://web_mutt"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://webemail_mutt"><b>Mutt</b><br /><span><script>dict.print('netemail', 'mutt');</script></span></a>
+		<td><a href="aptus://web_mutt"><b>Mutt</b><br /><span><script>dict.print('web', 'mutt');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://webemail_sylpheed"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/sylpheed.svg" class="appicon"><br /></a>
+		<td><a href="aptus://web_sylpheed"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/sylpheed.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://webemail_sylpheed"><b>Sylpheed</b><br /><span><script>dict.print('netemail', 'sylpheed');</script></span></a>
+		<td><a href="aptus://web_sylpheed"><b>Sylpheed</b><br /><span><script>dict.print('web', 'sylpheed');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://webemail_thunderbird"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/thunderbird.svg" class="appicon"><br /></a>
+		<td><a href="aptus://web_thunderbird"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/thunderbird.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://webemail_thunderbird"><b>Thunderbird</b><br /><span><script>dict.print('netemail', 'thunderbird');</script></span></a>
+		<td><a href="aptus://web_thunderbird"><b>Thunderbird</b><br /><span><script>dict.print('web', 'thunderbird');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://webemail_trojita"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
+		<td><a href="aptus://web_trojita"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://webemail_trojita"><b>Trojita</b><br /><span><script>dict.print('netemail', 'trojita');</script></span></a>
+		<td><a href="aptus://web_trojita"><b>Trojita</b><br /><span><script>dict.print('web', 'trojita');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
