--- a/usr/lib/sparky-aptus-appcenter/net-p2p.html
+++ b/usr/lib/sparky-aptus-appcenter/net-p2p.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: Dec 6, 2018 by pavroo
+Last update: Dec 7, 2018 by pavroo
 -->
 	<head>
 		<title>APTus AppCenter</title>
@@ -34,9 +34,93 @@ Last update: Dec 6, 2018 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
-		<td><a href="aptus://web_"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/.svg" class="appicon"><br /></a>
+		<td><a href="aptus://web_amule"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/amule.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_"><b>X</b><br /><span><script>dict.print('web', '');</script></span></a>
+		<td><a href="aptus://web_amule"><b>aMule</b><br /><span><script>dict.print('web', 'amule');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_bitstormlite"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_bitstormlite"><b>BitStormLite</b><br /><span><script>dict.print('web', 'bitstormlite');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_bittornadu-gui"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_bittornado-gui"><b>BitTornado-GUI</b><br /><span><script>dict.print('web', 'bittornadogui');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_ctorrnet"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_ctorrent"><b>CTorrent</b><br /><span><script>dict.print('web', 'ctorrent');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_deluge"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/deluge.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_deluge"><b>Deluge</b><br /><span><script>dict.print('web', 'deluge');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_gtk-gnutella"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gnutella.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_gtk-gnutella"><b>GTK-Gnutella</b><br /><span><script>dict.print('web', 'gtkgnutella');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_ktorrent"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/ktorrent.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_ktorrent"><b>KTorrent</b><br /><span><script>dict.print('web', 'ktorrent');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_mldonkey-gui"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_mldonkey-gui"><b>MLDonkey-GUI</b><br /><span><script>dict.print('web', 'mldonkeygui');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_nicotine"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_nicotine"><b>Nicotine</b><br /><span><script>dict.print('web', 'nicotine');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_qbittorrent"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/qbittorrent.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_qbittorrent"><b>qBittorrent</b><br /><span><script>dict.print('web', 'qbittorrent');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_rtorrent"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_rtorrent"><b>rtorrent</b><br /><span><script>dict.print('web', 'rtorrent');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_transmission"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/transmission.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_transmission"><b>Transmission</b><br /><span><script>dict.print('web', 'transmission');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_vuze"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/Azureus.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_vuze"><b>Vuze</b><br /><span><script>dict.print('web', 'vuze');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
