--- a/usr/lib/sparky-aptus-appcenter/net-others.html
+++ b/usr/lib/sparky-aptus-appcenter/net-others.html
@@ -34,9 +34,38 @@ Last update: Dec 3, 2018 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
+		<td><a href="aptus://web_dropbox"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/dropbox.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_dropbox"><b>Dropbox</b><br /><span><script>dict.print('web', 'dropbox');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://web_google-earth"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/google-earth.svg" class="appicon"><br /></a>
 		</td>
 		<td><a href="aptus://web_google-earth"><b>Google Earth</b><br /><span><script>dict.print('web', 'googleearth');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_megasync"><img src="images/mega.png" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_megasync"><b>MegaSync</b><br /><span><script>dict.print('web', 'megasync');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://web_spideroakone"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/spideroak.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_spideroakone"><b>SpiderOakONE</b><br /><span><script>dict.print('web', 'spideroakone');</script></span></a>
+		<br />&nbsp;
+		</td>
+	</tr>
+	
+	<tr>
+		<td><a href="aptus://web_"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/.svg" class="appicon"><br /></a>
+		</td>
+		<td><a href="aptus://web_"><b>G</b><br /><span><script>dict.print('web', '');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
