--- a/usr/lib/sparky-aptus-appcenter/info.html
+++ b/usr/lib/sparky-aptus-appcenter/info.html
@@ -18,9 +18,9 @@ Last update: Dec 2, 2018 by pavroo
 	</div>
 	<div id="menu-wrapper">
 		<ul id="menu">
-			<li><a href="index.html"><span><script>dict.print('menu', 'categories');</script></span></a></li>
-			<li><a href="tools.html"><span><script>dict.print('menu', 'aptus');</script></span></a></li>
-			<li><a href="info.html"><span><script>dict.print('menu', 'info');</script></span></a></li>
+			<li><a href="index.html"><span><script>dict.print('main', 'categories');</script></span></a></li>
+			<li><a href="tools.html"><span><script>dict.print('main', 'aptus');</script></span></a></li>
+			<li><a href="info.html"><span><script>dict.print('main', 'info');</script></span></a></li>
 		</ul>
 	</div>
 	<!-- end #menu -->
@@ -32,18 +32,18 @@ Last update: Dec 2, 2018 by pavroo
 <p>&nbsp;<br />
 <b>Sparky APTus AppCenter 20181206 beta</b><br />
 &nbsp;<br />
-<span><script>dict.print('info', 'info01');</script></span><br />
-- <span><script>dict.print('info', 'info02');</script></span><br/>
-- <span><script>dict.print('info', 'info03');</script></span><br />
-- <span><script>dict.print('info', 'info04');</script></span><br />
-- <span><script>dict.print('info', 'info05');</script></span><br />
+<span><script>dict.print('main', 'info01');</script></span><br />
+- <span><script>dict.print('main', 'info02');</script></span><br/>
+- <span><script>dict.print('main', 'info03');</script></span><br />
+- <span><script>dict.print('main', 'info04');</script></span><br />
+- <span><script>dict.print('main', 'info05');</script></span><br />
 &nbsp;<br />
-<span><script>dict.print('info', 'info06');</script></span><br />
-<span><script>dict.print('info', 'info07');</script></span><br />
-<span><script>dict.print('info', 'info08');</script></span><br />
-<span><script>dict.print('info', 'info09');</script></span><br />
+<span><script>dict.print('main', 'info06');</script></span><br />
+<span><script>dict.print('main', 'info07');</script></span><br />
+<span><script>dict.print('main', 'info08');</script></span><br />
+<span><script>dict.print('main', 'info09');</script></span><br />
 &nbsp;<br />
-<span><script>dict.print('info', 'info10');</script></span><br />
+<span><script>dict.print('main', 'info10');</script></span><br />
 - Paweł "pavroo" Pijanowski<br />
 - Piotr "MoroS" Mrożek<br /> 
 </p>	
