--- a/usr/lib/sparky-aptus-appcenter/internet.html
+++ b/usr/lib/sparky-aptus-appcenter/internet.html
@@ -19,9 +19,9 @@ Last update: Dec 2, 2018 by pavroo
 	<div id="menu-wrapper-back">
 		<ul id="menu">
 			<li><a href="index.html"><span>&laquo;-- </span></a></li>
-			<li><a href="index.html"><span><script>dict.print('menu', 'categories');</script></span></a></li>
-			<li><a href="tools.html"><span><script>dict.print('menu', 'aptus');</script></span></a></li>
-			<li><a href="info.html"><span><script>dict.print('menu', 'info');</script></span></a></li>
+			<li><a href="index.html"><span><script>dict.print('main', 'categories');</script></span></a></li>
+			<li><a href="tools.html"><span><script>dict.print('main', 'aptus');</script></span></a></li>
+			<li><a href="info.html"><span><script>dict.print('main', 'info');</script></span></a></li>
 		</ul>
 	</div>
 	<div id="page">
@@ -36,25 +36,25 @@ Last update: Dec 2, 2018 by pavroo
 <div class="column3">
 <tbody>
 	<tr>
-		<td><a href="net-communication.html" class="button"><span><script>dict.print('internet', 'communication');</script></span></a>
+		<td><a href="net-communication.html" class="button"><span><script>dict.print('main', 'communication');</script></span></a>
 		</td>
-		<td><a href="net-email.html" class="button"><span><script>dict.print('internet', 'email');</script></span></a>
+		<td><a href="net-email.html" class="button"><span><script>dict.print('main', 'email');</script></span></a>
 		</td>
-		<td><a href="net-filetransfer.html" class="button"><span><script>dict.print('internet', 'filetransfer');</script></span></a>
-		</td>
-	</tr>
-	<tr>
-		<td><a href="net-p2p.html" class="button"><span><script>dict.print('internet', 'p2p');</script></span></a>
-		</td>
-		<td><a href="net-rss.html" class="button"><span><script>dict.print('internet', 'rss');</script></span></a>
-		</td>
-		<td><a href="net-access.html" class="button"><span><script>dict.print('internet', 'universalaccess');</script></span></a>
+		<td><a href="net-filetransfer.html" class="button"><span><script>dict.print('main', 'filetransfer');</script></span></a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="net-webbrowser.html" class="button"><span><script>dict.print('internet', 'webbrowsers');</script></span></a>
+		<td><a href="net-p2p.html" class="button"><span><script>dict.print('main', 'p2p');</script></span></a>
 		</td>
-		<td><a href="net-others.html" class="button"><span><script>dict.print('internet', 'others');</script></span></a>
+		<td><a href="net-rss.html" class="button"><span><script>dict.print('main', 'rss');</script></span></a>
+		</td>
+		<td><a href="net-access.html" class="button"><span><script>dict.print('main', 'universalaccess');</script></span></a>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="net-webbrowser.html" class="button"><span><script>dict.print('main', 'webbrowsers');</script></span></a>
+		</td>
+		<td><a href="net-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
 		</td>
 		<td>
 		</td>
