--- a/usr/lib/sparky-aptus-appcenter/office.html
+++ b/usr/lib/sparky-aptus-appcenter/office.html
@@ -19,9 +19,9 @@ Last update: Dec 2, 2018 by pavroo
 	<div id="menu-wrapper-back">
 		<ul id="menu">
 			<li><a href="index.html"><span>&laquo;-- </span></a></li>
-			<li><a href="index.html"><span><script>dict.print('menu', 'categories');</script></span></a></li>
-			<li><a href="tools.html"><span><script>dict.print('menu', 'aptus');</script></span></a></li>
-			<li><a href="info.html"><span><script>dict.print('menu', 'info');</script></span></a></li>
+			<li><a href="index.html"><span><script>dict.print('main', 'categories');</script></span></a></li>
+			<li><a href="tools.html"><span><script>dict.print('main', 'aptus');</script></span></a></li>
+			<li><a href="info.html"><span><script>dict.print('main', 'info');</script></span></a></li>
 		</ul>
 	</div>
 	<div id="page">
@@ -36,28 +36,28 @@ Last update: Dec 2, 2018 by pavroo
 <div class="column3">
 <tbody>
 	<tr>
-		<td><a href="office-addressbook.html" class="button"><span><script>dict.print('office', 'addressbooks');</script></span></a>
+		<td><a href="office-addressbook.html" class="button"><span><script>dict.print('main', 'addressbooks');</script></span></a>
 		</td>
-		<td><a href="office-calculator.html" class="button"><span><script>dict.print('office', 'calculators');</script></span></a>
+		<td><a href="office-calculator.html" class="button"><span><script>dict.print('main', 'calculators');</script></span></a>
 		</td>
-		<td><a href="office-comix.html" class="button"><span><script>dict.print('office', 'comix');</script></span></a>
+		<td><a href="office-comix.html" class="button"><span><script>dict.print('main', 'comix');</script></span></a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="office-html.html" class="button"><span><script>dict.print('office', 'htmleditors');</script></span></a>
+		<td><a href="office-html.html" class="button"><span><script>dict.print('main', 'htmleditors');</script></span></a>
 		</td>
-		<td><a href="office-officesuite.html" class="button"><span><script>dict.print('office', 'officesuite');</script></span></a>
+		<td><a href="office-officesuite.html" class="button"><span><script>dict.print('main', 'officesuite');</script></span></a>
 		</td>
-		<td><a href="office-pdf.html" class="button"><span><script>dict.print('office', 'pdf');</script></span></a>
+		<td><a href="office-pdf.html" class="button"><span><script>dict.print('main', 'pdf');</script></span></a>
 		</td>
 	</tr>
 	<tr>
 		
-		<td><a href="office-spreedsheet.html" class="button"><span><script>dict.print('office', 'spreedsheet');</script></span></a>
+		<td><a href="office-spreedsheet.html" class="button"><span><script>dict.print('main', 'spreedsheet');</script></span></a>
 		</td>
-		<td><a href="office-text.html" class="button"><span><script>dict.print('office', 'texteditors');</script></span></a>
+		<td><a href="office-text.html" class="button"><span><script>dict.print('main', 'texteditors');</script></span></a>
 		</td>
-		<td><a href="office-others.html" class="button"><span><script>dict.print('office', 'others');</script></span></a>
+		<td><a href="office-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
 		</td>
 	</tr>
 </tbody>
