--- a/usr/lib/sparky-aptus-appcenter/index.html
+++ b/usr/lib/sparky-aptus-appcenter/index.html
@@ -19,9 +19,9 @@ Last update: Dec 2, 2018 by pavroo
 	</div>
 	<div id="menu-wrapper">
 		<ul id="menu">
-			<li><a href="index.html"><span><script>dict.print('menu', 'categories');</script></span></a></li>
-			<li><a href="tools.html"><span><script>dict.print('menu', 'aptus');</script></span></a></li>
-			<li><a href="info.html"><span><script>dict.print('menu', 'info');</script></span></a></li>
+			<li><a href="index.html"><span><script>dict.print('main', 'categories');</script></span></a></li>
+			<li><a href="tools.html"><span><script>dict.print('main', 'aptus');</script></span></a></li>
+			<li><a href="info.html"><span><script>dict.print('main', 'info');</script></span></a></li>
 		</ul>
 	</div>
 	<div id="page">
@@ -36,35 +36,35 @@ Last update: Dec 2, 2018 by pavroo
 <div class="column3">
 <tbody>
 	<tr>
-		<td><a href="accessories.html" class="button"><span><script>dict.print('categories', 'accessories');</script></span></a>
+		<td><a href="accessories.html" class="button"><span><script>dict.print('main', 'accessories');</script></span></a>
 		</td>
-		<td><a href="desktop.html" class="button"><span><script>dict.print('categories', 'desktops');</script></span></a>
+		<td><a href="desktop.html" class="button"><span><script>dict.print('main', 'desktops');</script></span></a>
 		</td>
-		<td><a href="development.html" class="button"><span><script>dict.print('categories', 'development');</script></span></a>
-		</td>
-	</tr>
-	<tr>
-		<td><a href="education.html" class="button"><span><script>dict.print('categories', 'education');</script></span></a>
-		</td>
-		<td><a href="games.html" class="button"><span><script>dict.print('categories', 'games');</script></span></a>
-		</td>
-		<td><a href="graphics.html" class="button"><span><script>dict.print('categories', 'graphics');</script></span></a>
+		<td><a href="development.html" class="button"><span><script>dict.print('main', 'development');</script></span></a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="internet.html" class="button"><span><script>dict.print('categories', 'internet');</script></span></a>
+		<td><a href="education.html" class="button"><span><script>dict.print('main', 'education');</script></span></a>
 		</td>
-		<td><a href="multimedia.html" class="button"><span><script>dict.print('categories', 'multimedia');</script></span></a>
+		<td><a href="games.html" class="button"><span><script>dict.print('main', 'games');</script></span></a>
 		</td>
-		<td><a href="office.html" class="button"><span><script>dict.print('categories', 'office');</script></span></a>
+		<td><a href="graphics.html" class="button"><span><script>dict.print('main', 'graphics');</script></span></a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="science.html" class="button"><span><script>dict.print('categories', 'science');</script></span></a>
+		<td><a href="internet.html" class="button"><span><script>dict.print('main', 'internet');</script></span></a>
 		</td>
-		<td><a href="system.html" class="button"><span><script>dict.print('categories', 'security');</script></span></a>
+		<td><a href="multimedia.html" class="button"><span><script>dict.print('main', 'multimedia');</script></span></a>
 		</td>
-		<td><a href="system.html" class="button"><span><script>dict.print('categories', 'system');</script></span></a>
+		<td><a href="office.html" class="button"><span><script>dict.print('main', 'office');</script></span></a>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="science.html" class="button"><span><script>dict.print('main', 'science');</script></span></a>
+		</td>
+		<td><a href="system.html" class="button"><span><script>dict.print('main', 'security');</script></span></a>
+		</td>
+		<td><a href="system.html" class="button"><span><script>dict.print('main', 'system');</script></span></a>
 		</td>
 	</tr>
 </tbody>
