--- a/usr/lib/sparky-aptus-appcenter/multimedia.html
+++ b/usr/lib/sparky-aptus-appcenter/multimedia.html
@@ -19,9 +19,9 @@ Last update: Dec 2, 2018 by pavroo
 	<div id="menu-wrapper-back">
 		<ul id="menu">
 			<li><a href="index.html"><span>&laquo;-- </span></a></li>
-			<li><a href="index.html"><span><script>dict.print('menu', 'categories');</script></span></a></li>
-			<li><a href="tools.html"><span><script>dict.print('menu', 'aptus');</script></span></a></li>
-			<li><a href="info.html"><span><script>dict.print('menu', 'info');</script></span></a></li>
+			<li><a href="index.html"><span><script>dict.print('main', 'categories');</script></span></a></li>
+			<li><a href="tools.html"><span><script>dict.print('main', 'aptus');</script></span></a></li>
+			<li><a href="info.html"><span><script>dict.print('main', 'info');</script></span></a></li>
 		</ul>
 	</div>
 	<div id="page">
@@ -36,15 +36,15 @@ Last update: Dec 2, 2018 by pavroo
 <div class="column3">
 <tbody>
 	<tr>
-		<td><a href="media-audio.html" class="button"><span><script>dict.print('multimedia', 'audio');</script></span></a>
+		<td><a href="media-audio.html" class="button"><span><script>dict.print('main', 'audio');</script></span></a>
 		</td>
-		<td><a href="media-codecs.html" class="button"><span><script>dict.print('multimedia', 'codecs');</script></span></a>
+		<td><a href="media-codecs.html" class="button"><span><script>dict.print('main', 'codecs');</script></span></a>
 		</td>
-		<td><a href="media-video.html" class="button"><span><script>dict.print('multimedia', 'video');</script></span></a>
+		<td><a href="media-video.html" class="button"><span><script>dict.print('main', 'video');</script></span></a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="media-other.html" class="button"><span><script>dict.print('multimedia', 'others');</script></span></a>
+		<td><a href="media-other.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
 		</td>
 		<td>
 		</td>
