--- a/usr/lib/sparky-aptus-appcenter/net-others.html
+++ b/usr/lib/sparky-aptus-appcenter/net-others.html
@@ -19,9 +19,9 @@ Last update: Dec 3, 2018 by pavroo
 	<div id="menu-wrapper-back">
 		<ul id="menu">
 			<li><a href="internet.html"><span>&laquo;-- </span></a></li>
-			<li><a href="index.html"><span><script>dict.print('menu', 'categories');</script></span></a></li>
-			<li><a href="tools.html"><span><script>dict.print('menu', 'aptus');</script></span></a></li>
-			<li><a href="info.html"><span><script>dict.print('menu', 'info');</script></span></a></li>
+			<li><a href="index.html"><span><script>dict.print('main', 'categories');</script></span></a></li>
+			<li><a href="tools.html"><span><script>dict.print('main', 'aptus');</script></span></a></li>
+			<li><a href="info.html"><span><script>dict.print('main', 'info');</script></span></a></li>
 		</ul>
 	</div>
 	<div id="page">
@@ -34,38 +34,38 @@ Last update: Dec 3, 2018 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
-		<td><a href="aptus://web_dropbox"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/dropbox.svg" class="appicon"><br /></a>
+		<td><a href="aptus://dropbox"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/dropbox.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_dropbox"><b>Dropbox</b><br /><span><script>dict.print('web', 'dropbox');</script></span></a>
+		<td><a href="aptus://dropbox"><b>Dropbox</b><br /><span><script>dict.print('web', 'dropbox');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_google-earth"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/google-earth.svg" class="appicon"><br /></a>
+		<td><a href="aptus://google-earth-pro-stable"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/google-earth.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_google-earth"><b>Google Earth</b><br /><span><script>dict.print('web', 'googleearth');</script></span></a>
+		<td><a href="aptus://google-earth-pro-stable"><b>Google Earth</b><br /><span><script>dict.print('web', 'googleearth');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_megasync"><img src="images/mega.png" class="appicon"><br /></a>
+		<td><a href="aptus://megasync"><img src="images/mega.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_megasync"><b>MegaSync</b><br /><span><script>dict.print('web', 'megasync');</script></span></a>
+		<td><a href="aptus://megasync"><b>MegaSync</b><br /><span><script>dict.print('web', 'megasync');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_spideroakone"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/spideroak.svg" class="appicon"><br /></a>
+		<td><a href="aptus://spideroakone"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/spideroak.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_spideroakone"><b>SpiderOakONE</b><br /><span><script>dict.print('web', 'spideroakone');</script></span></a>
+		<td><a href="aptus://spideroakone"><b>SpiderOakONE</b><br /><span><script>dict.print('web', 'spideroakone');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	
 	<tr>
-		<td><a href="aptus://web_"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/.svg" class="appicon"><br /></a>
+		<td><a href="aptus://"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_"><b>G</b><br /><span><script>dict.print('web', '');</script></span></a>
+		<td><a href="aptus://"><b>G</b><br /><span><script>dict.print('web', '');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
