--- a/usr/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/usr/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -19,9 +19,9 @@ Last update: Dec 3, 2018 by pavroo
 	<div id="menu-wrapper-back">
 		<ul id="menu">
 			<li><a href="internet.html"><span>&laquo;-- </span></a></li>
-			<li><a href="index.html"><span><script>dict.print('menu', 'categories');</script></span></a></li>
-			<li><a href="tools.html"><span><script>dict.print('menu', 'aptus');</script></span></a></li>
-			<li><a href="info.html"><span><script>dict.print('menu', 'info');</script></span></a></li>
+			<li><a href="index.html"><span><script>dict.print('main', 'categories');</script></span></a></li>
+			<li><a href="tools.html"><span><script>dict.print('main', 'aptus');</script></span></a></li>
+			<li><a href="info.html"><span><script>dict.print('main', 'info');</script></span></a></li>
 		</ul>
 	</div>
 	<div id="page">
@@ -34,219 +34,219 @@ Last update: Dec 3, 2018 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
-		<td><a href="aptus://web_brave"><img src="images/brave.png" class="appicon"><br /></a>
+		<td><a href="aptus://brave"><img src="images/brave.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_brave"><b>Brave</b><br /><span><script>dict.print('web', 'brave');</script></span></a>
+		<td><a href="aptus://brave"><b>Brave</b><br /><span><script>dict.print('web', 'brave');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_chromium"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/chromium.svg" class="appicon"><br /></a>
+		<td><a href="aptus://chromium"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/chromium.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_chromium"><b>Chromium</b><br /><span><script>dict.print('web', 'chromium');</script></span></a>
+		<td><a href="aptus://chromium"><b>Chromium</b><br /><span><script>dict.print('web', 'chromium');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_conkeror"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/web-browser.svg" class="appicon"><br /></a>
+		<td><a href="aptus://conkeror"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/web-browser.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_conkeror"><b>Conkeror</b><br /><span><script>dict.print('web', 'conkeror');</script></span></a>
+		<td><a href="aptus://conkeror"><b>Conkeror</b><br /><span><script>dict.print('web', 'conkeror');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_cyberfox"><img src="images/cyberfox.png" class="appicon"><br /></a>
+		<td><a href="aptus://cyberfox"><img src="images/cyberfox.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_cyberfox"><b>Cyberfox</b><br /><span><script>dict.print('web', 'cyberfox');</script></span></a>
+		<td><a href="aptus://cyberfox"><b>Cyberfox</b><br /><span><script>dict.print('web', 'cyberfox');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_dillo"><img src="images/dillo.png" class="appicon"><br /></a>
+		<td><a href="aptus://dillo"><img src="images/dillo.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_dillo"><b>Dillo</b><br /><span><script>dict.print('web', 'dillo');</script></span></a>
+		<td><a href="aptus://dillo"><b>Dillo</b><br /><span><script>dict.print('web', 'dillo');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_dooble"><img src="images/dooble.png" class="appicon"><br /></a>
+		<td><a href="aptus://dooble"><img src="images/dooble.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_dooble"><b>Dooble</b><br /><span><script>dict.print('web', 'dooble');</script></span></a>
+		<td><a href="aptus://dooble"><b>Dooble</b><br /><span><script>dict.print('web', 'dooble');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_elinks"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/web-browser.svg" class="appicon"><br /></a>
+		<td><a href="aptus://elinks"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/web-browser.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_elinks"><b>ELinks</b><br /><span><script>dict.print('web', 'elinks');</script></span></a>
+		<td><a href="aptus://elinks"><b>ELinks</b><br /><span><script>dict.print('web', 'elinks');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_epiphany"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/epiphany.svg" class="appicon"><br /></a>
+		<td><a href="aptus://epiphany-browser"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/epiphany.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_epiphany"><b>Epiphany</b><br /><span><script>dict.print('web', 'epiphany');</script></span></a>
+		<td><a href="aptus://epiphany-browser"><b>Epiphany</b><br /><span><script>dict.print('web', 'epiphany');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_falkon"><img src="images/falkon.png" class="appicon"><br /></a>
+		<td><a href="aptus://falkon"><img src="images/falkon.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_falkon"><b>Falkon</b><br /><span><script>dict.print('web', 'falkon');</script></span></a>
+		<td><a href="aptus://falkon"><b>Falkon</b><br /><span><script>dict.print('web', 'falkon');</script></span></a>
 		</td>
 		<br />&nbsp;
 	</tr>
 	<tr>
-		<td><a href="aptus://web_firefox-esr"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/firefox.svg" class="appicon"><br /></a>
+		<td><a href="aptus://firefox-esr"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/firefox.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_firefox-esr"><b>Firefox ESR</b><br /><span><script>dict.print('web', 'firefoxesr');</script></span></a>
+		<td><a href="aptus://firefox-esr"><b>Firefox ESR</b><br /><span><script>dict.print('web', 'firefoxesr');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_firefox-latest"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/firefox.svg" class="appicon"><br /></a>
+		<td><a href="aptus://firefox"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/firefox.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_firefox-latest"><b>Firefox Latest</b><br /><span><script>dict.print('web', 'firefoxlatest');</script></span></a>
+		<td><a href="aptus://firefox-latest"><b>Firefox Latest</b><br /><span><script>dict.print('web', 'firefoxlatest');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_google-chrome-stable"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/google-chrome.svg" class="appicon"><br /></a>
+		<td><a href="aptus://google-chrome-stable"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/google-chrome.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_google-chrome-stable"><b>Google Chrome</b><br /><span><script>dict.print('web', 'googlechrome');</script></span></a>
+		<td><a href="aptus://google-chrome-stable"><b>Google Chrome</b><br /><span><script>dict.print('web', 'googlechrome');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_icecat"><img src="images/icecat.png" class="appicon"><br /></a>
+		<td><a href="aptus://icecat"><img src="images/icecat.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_icecat"><b>IceCat</b><br /><span><script>dict.print('web', 'icecat');</script></span></a>
+		<td><a href="aptus://icecat"><b>IceCat</b><br /><span><script>dict.print('web', 'icecat');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_iridium"><img src="images/iridium.png" class="appicon"><br /></a>
+		<td><a href="aptus://iridium-browser"><img src="images/iridium.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_iridium"><b>Iridium</b><br /><span><script>dict.print('web', 'iridium');</script></span></a>
+		<td><a href="aptus://iridium-browser"><b>Iridium</b><br /><span><script>dict.print('web', 'iridium');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_iron"><img src="images/iron.png" class="appicon"><br /></a>
+		<td><a href="aptus://iron"><img src="images/iron.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_iron"><b>Iron</b><br /><span><script>dict.print('web', 'iron');</script></span></a>
+		<td><a href="aptus://iron"><b>Iron</b><br /><span><script>dict.print('web', 'iron');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_konqueror"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/konqueror.svg" class="appicon"><br /></a>
+		<td><a href="aptus://konqueror"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/konqueror.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_konqueror"><b>Konqueror</b><br /><span><script>dict.print('web', 'konqueror');</script></span></a>
+		<td><a href="aptus://konqueror"><b>Konqueror</b><br /><span><script>dict.print('web', 'konqueror');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_links2"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/web-browser.svg" class="appicon"><br /></a>
+		<td><a href="aptus://links2"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/web-browser.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_links2"><b>Links2</b><br /><span><script>dict.print('web', 'links2');</script></span></a>
+		<td><a href="aptus://links2"><b>Links2</b><br /><span><script>dict.print('web', 'links2');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_lynx"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/web-browser.svg" class="appicon"><br /></a>
+		<td><a href="aptus://lynx"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/web-browser.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_lynx"><b>Lynx</b><br /><span><script>dict.print('web', 'lynx');</script></span></a>
+		<td><a href="aptus://lynx"><b>Lynx</b><br /><span><script>dict.print('web', 'lynx');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_midori"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/midori.svg" class="appicon"><br /></a>
+		<td><a href="aptus://midori"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/midori.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_midori"><b>Midori</b><br /><span><script>dict.print('web', 'midori');</script></span></a>
+		<td><a href="aptus://midori"><b>Midori</b><br /><span><script>dict.print('web', 'midori');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_min"><img src="images/min.png" class="appicon"><br /></a>
+		<td><a href="aptus://min"><img src="images/min.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_min"><b>Min</b><br /><span><script>dict.print('web', 'min');</script></span></a>
+		<td><a href="aptus://min"><b>Min</b><br /><span><script>dict.print('web', 'min');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_netrik"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/web-browser.svg" class="appicon"><br /></a>
+		<td><a href="aptus://netrik"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/web-browser.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_netrik"><b>Netrik</b><br /><span><script>dict.print('web', 'netrik');</script></span></a>
+		<td><a href="aptus://netrik"><b>Netrik</b><br /><span><script>dict.print('web', 'netrik');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_netsurf"><img src="images/netsurf.png" class="appicon"><br /></a>
+		<td><a href="aptus://netsurf"><img src="images/netsurf.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_netsurf"><b>NetSurf</b><br /><span><script>dict.print('web', 'netsurf');</script></span></a>
+		<td><a href="aptus://netsurf"><b>NetSurf</b><br /><span><script>dict.print('web', 'netsurf');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_opera-stable"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/opera.svg" class="appicon"><br /></a>
+		<td><a href="aptus://opera-stable"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/opera.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_opera-stable"><b>Opera</b><br /><span><script>dict.print('web', 'opera');</script></span></a>
+		<td><a href="aptus://opera-stable"><b>Opera</b><br /><span><script>dict.print('web', 'opera');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_otter-browser"><img src="images/otter.png" class="appicon"><br /></a>
+		<td><a href="aptus://otter-browser"><img src="images/otter.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_otter-browser"><b>Otter</b><br /><span><script>dict.print('web', 'otter');</script></span></a>
+		<td><a href="aptus://otter-browser"><b>Otter</b><br /><span><script>dict.print('web', 'otter');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_palemoon"><img src="images/palemoon.png" class="appicon"><br /></a>
+		<td><a href="aptus://palemoon"><img src="images/palemoon.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_palemoon"><b>Pale Moon</b><br /><span><script>dict.print('web', 'palemoon');</script></span></a>
+		<td><a href="aptus://palemoon"><b>Pale Moon</b><br /><span><script>dict.print('web', 'palemoon');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_qute"><img src="images/qutebrowser.png" class="appicon"><br /></a>
+		<td><a href="aptus://qutebrowser"><img src="images/qutebrowser.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_qute"><b>qutebrowser</b><br /><span><script>dict.print('web', 'qute');</script></span></a>
+		<td><a href="aptus://qutebrowser"><b>qutebrowser</b><br /><span><script>dict.print('web', 'qute');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_seamonkey"><img src="images/seamonkey.png" class="appicon"><br /></a>
+		<td><a href="aptus://seamonkey"><img src="images/seamonkey.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_seamonkey"><b>SeaMonkey</b><br /><span><script>dict.print('web', 'seamonkey');</script></span></a>
+		<td><a href="aptus://seamonkey"><b>SeaMonkey</b><br /><span><script>dict.print('web', 'seamonkey');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_tor-browser"><img src="images/tor-browser.png" class="appicon"><br /></a>
+		<td><a href="aptus://tor-browser"><img src="images/tor-browser.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_tor-browser"><b>TOR Browser</b><br /><span><script>dict.print('web', 'torbrowser');</script></span></a>
+		<td><a href="aptus://tor-browser"><b>TOR Browser</b><br /><span><script>dict.print('web', 'torbrowser');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_vivaldi-stable"><img src="images/vivaldi.png" class="appicon"><br /></a>
+		<td><a href="aptus://vivaldi-stable"><img src="images/vivaldi.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_vivaldi-stable"><b>Vivaldi</b><br /><span><script>dict.print('web', 'vivaldi');</script></span></a>
+		<td><a href="aptus://vivaldi-stable"><b>Vivaldi</b><br /><span><script>dict.print('web', 'vivaldi');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_w3m"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/web-browser.svg" class="appicon"><br /></a>
+		<td><a href="aptus://w3m"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/web-browser.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_w3m"><b>w3m</b><br /><span><script>dict.print('web', 'w3m');</script></span></a>
+		<td><a href="aptus://w3m"><b>w3m</b><br /><span><script>dict.print('web', 'w3m');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://web_waterfox"><img src="images/waterfox.png" class="appicon"><br /></a>
+		<td><a href="aptus://waterfox"><img src="images/waterfox.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://web_waterfox"><b>Waterfox</b><br /><span><script>dict.print('web', 'waterfox');</script></span></a>
+		<td><a href="aptus://waterfox"><b>Waterfox</b><br /><span><script>dict.print('web', 'waterfox');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
